samples/_failures_safe/1761201535_14d30c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93f88e33.c: In function ‘main’:
./samples/SAFE/__tmp_93f88e33.c:150:17: error: expected identifier at end of input
  150 |                 printf("  %s: %s\n", entries[i].
      |                 ^~~~~~
./samples/SAFE/__tmp_93f88e33.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93f88e33.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93f88e33.c:150:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93f88e33.c:150:17: error: expected declaration or statement at end of input
